<resources>
    <string name="app_name">StudyWire</string>

    <!-- NavigationDrawer-->


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_about_us">Über uns</string>
    <string name="nav_anonymer_modus">Anonymer Modus</string>
    <string name="nav_feedback">Feedback geben</string>
    <string name="nav_fehler_melden">Fehler melden</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Account</item>
        <item>Anonymer Modus</item>
    </string-array>

    <string name="activity_title_about_us">Über uns</string>
    <string name="activity_title_feedback">Feedback geben</string>
    <string name="activity_title_fehler_melden">Fehler melden</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="passwortvergessen_text">Gib die Email-Adresse deines Accounts an, \num dessen Passwort als Email zu erhalten.</string>
    <string name="feedback_text">Wir sind stets bemüht, StudyWire zu \noptimieren - denn je besser unsere\nPlattform gestaltet ist, desto leichter\nfällt uns allen der Studienalltag. Um\njedem die bestmögliche Erfahrung\nbereit stellen zu können, ist auch Dein\nFeedback gefragt!\n\nTeile uns mit, wo Du Raum für weitere\nVerbesserungen siehst oder welche\nFunktionen wir in Zukunft noch\nimplementieren sollen.\n\nVielen Dank dafür, dass du Teil dieser\nCommunity bist!</string>
    <string name="feedback_button_text">Feedback geben</string>
    <string name="fehler_text">Wir legen höchsten Wert auf eine\nreibungsfreie Erfahrung für all unsere\nNutzer - also auch Dich! Sollte Dir beim\nGebrauch von Study Wire auffallen,\ndass die App mal nicht ganz tut, wie sie\nsoll, lasse es uns wissen.\n\nTeile uns mit, wann und wobei der\nFehler aufgetreten und ob er für Dich\nreproduzierbar ist.\nSehr gerne empfangen wir auch Deine\nScreenshots, um noch schneller agieren\nzu können.\n\nVielen Dank dafür, dass Du uns dabei\nhilfst, Study Wire zu optimieren!</string>
    <string name="fehler_button_text">Fehler melden</string>
    <string name="login_button_text">Anmelden</string>
    <string name="register_mail">Email-Adresse</string>
    <string name="register_student_id">Matrikelnummer</string>
    <string name="register_password">Passwort</string>
    <string name="register_name">Vorname</string>
    <string name="register_surname">Name</string>
    <string name="register_button_text">Registrieren</string>
    <string name="login_email_hint">Email-Adresse</string>
    <string name="login_stay_registered">angemeldet bleiben</string>
    <string name="loginscreen_button_text">Anmelden</string>
    <string name="login_passwordforgotten_link">Passwort vergessen?</string>
    <string name="login_registerlink">Account erstellen</string>
    <string name="login_passwordhint">Passwort</string>
    <string name="coursepage_Scripts">Skripte</string>
    <string name="coursepage_solutions">Lösungen</string>
    <string name="coursepage_exercises">Übungen</string>
    <string name="coursepage_polls">Umfragen</string>
    <string name="coursepage_coursemembers">Kursmitglieder</string>
    <string name="account_profile_info">Nadler, Patrick\nTWIW16B, Stuttgart</string>
    <string name="navigation_myacc">Mein Account</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="navigation_sendfeedback">Feedback senden</string>
    <string name="navigation_reportbug">Fehler melden</string>
    <string name="navigation_aboutus">Über uns</string>
    <string name="polls_headerhint">Name, deadline</string>
    <string name="poll_bezeichnunghint">Bezeichnung</string>
    <string name="title_activity_kursmitglieder">KursmitgliederActivity</string>
</resources>


