<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/icon_accountshield"
        android:title="@string/navigation_myacc" />

    <item
        android:id="@+id/nav_feedback_senden"
        android:icon="@drawable/icon_feedbackheart"
        android:title="@string/navigation_sendfeedback" />

    <item
        android:id="@+id/nav_fehler_melden"
        android:icon="@drawable/icon_bugreport"
        android:title="@string/navigation_reportbug" />

    <item
        android:id="@+id/nav_einstellungen"
        android:icon="@drawable/icon_settingscog"
        android:title="@string/navigation_settings" />

    <item android:id="@+id/nav_about_us"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/navigation_aboutus" />



</menu>