<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dunkelblau"
    tools:context="com.ndlp.socialstudy.LoginSystem.RegisterActivity">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="Deine DH-Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etMatrikelnummer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="@string/register_student_id"
            android:inputType="number"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="@string/register_name"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="@string/register_surname"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etKurs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="Kursbezeichnung"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_loginbox"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:paddingLeft="36dp"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/shape_loginbutton"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="@color/weiß"
            android:textColorHint="@color/weiß"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>